--- a/public/index.html
+++ b/public/index.html
@@ -460,7 +460,7 @@
                 <p>JQUERY</p>
             </div>
             <div align="center">
-                <img id="logo" src="/assets/JavaScript.png" alt="JavaScript Logo">
+                <img id="logo" src="/assets/javaScript.png" alt="JavaScript Logo">
                 <p>JAVASCRIPT</p>
             </div>
             <div align="center">
