--- a/public/index.html
+++ b/public/index.html
@@ -383,9 +383,9 @@
                 <div class="container-fluid d-flex flex-wrap">
                     <button class="btn btn-outline-success ms-0 m-2">My Resume</button>
                     <div class="d-block ms-0 m-2">
-                        <a href="mailto:jaykumar14921@gmail.com"><i style="height: 15px;" class="bi bi-envelope-at"></i></a>
-                        <a href="https://www.linkedin.com/in/jai-prakash-93b524297/" target="_blank" rel="noopener noreferrer"><i style="height: 15px;" class="bi bi-linkedin"></i></a>
-                        <a href="https://github.com/jaykumar14921" target="_blank" rel="noopener noreferrer"><i style="height: 15px;" class="bi bi-github"></i></a>
+                        <a href="mailto:jaykumar14921@gmail.com"><i style="height: 15px;" class="bi bi-envelope-at fs-4"></i></a>
+                        <a href="https://www.linkedin.com/in/jai-prakash-93b524297/" target="_blank" rel="noopener noreferrer"><i style="height: 15px;" class="bi bi-linkedin fs-4"></i></a>
+                        <a href="https://github.com/jaykumar14921" target="_blank" rel="noopener noreferrer"><i style="height: 15px;" class="bi bi-github fs-4"></i></a>
                     </div>
                 </div>
             </div>
@@ -543,7 +543,7 @@
     </div>
 
     <footer style="background-color: #000; height: 70px;">
-        <h1 align="center"><i>Thank You &#10084;</i></h1>
+        <h1 align="center"><i>Thank You  &#x1F495;</i></h1>
     </footer>
 
     <!-- Modal 1-->
