--- a/public/index.html
+++ b/public/index.html
@@ -383,9 +383,9 @@
                 <div class="container-fluid d-flex flex-wrap">
                     <button class="btn btn-outline-success ms-0 m-2">My Resume</button>
                     <div class="d-block ms-0 m-2">
-                        <a href="mailto:jaykumar14921@gmail.com"><i style="height: 15px;" class="bi bi-envelope-at fs-4"></i></a>
-                        <a href="https://www.linkedin.com/in/jai-prakash-93b524297/" target="_blank" rel="noopener noreferrer"><i style="height: 15px;" class="bi bi-linkedin fs-4"></i></a>
-                        <a href="https://github.com/jaykumar14921" target="_blank" rel="noopener noreferrer"><i style="height: 15px;" class="bi bi-github fs-4"></i></a>
+                        <a  class="m-2" href="mailto:jaykumar14921@gmail.com"><i style="height: 15px;" class="bi bi-envelope-at fs-6"></i></a>
+                        <a  class="m-2" href="https://www.linkedin.com/in/jai-prakash-93b524297/" target="_blank" rel="noopener noreferrer"><i style="height: 15px;" class="bi bi-linkedin fs-6"></i></a>
+                        <a  class="m-2" href="https://github.com/jaykumar14921" target="_blank" rel="noopener noreferrer"><i style="height: 15px;" class="bi bi-github fs-6"></i></a>
                     </div>
                 </div>
             </div>
@@ -394,7 +394,7 @@
     </div>
     
     <div class="d-block m-5">
-        <h2 align="center">My Skills</h2> <!-- Changed "kk" to "My Skills" -->
+        <h2 align="center">About</h2> 
         <p align="center" style="white-space: inherit;">Here are some of the tools/frameworks I have worked on</p>
     </div>
 
@@ -543,7 +543,7 @@
     </div>
 
     <footer style="background-color: #000; height: 70px;">
-        <h1 align="center"><i>Thank You  &#x1F495;</i></h1>
+        <h1 align="center"><i>Thank You  &#x1F9E1;</i></h1>
     </footer>
 
     <!-- Modal 1-->
