--- a/public/index.html
+++ b/public/index.html
@@ -383,9 +383,9 @@
                 <div class="container-fluid d-flex flex-wrap">
                     <button class="btn btn-outline-success ms-0 m-2">My Resume</button>
                     <div class="d-block ms-0 m-2">
-                        <a  class="m-2" href="mailto:jaykumar14921@gmail.com"><i style="height: 15px;" class="bi bi-envelope-at fs-6"></i></a>
-                        <a  class="m-2" href="https://www.linkedin.com/in/jai-prakash-93b524297/" target="_blank" rel="noopener noreferrer"><i style="height: 15px;" class="bi bi-linkedin fs-6"></i></a>
-                        <a  class="m-2" href="https://github.com/jaykumar14921" target="_blank" rel="noopener noreferrer"><i style="height: 15px;" class="bi bi-github fs-6"></i></a>
+                        <a  class="m-2" href="mailto:jaykumar14921@gmail.com"><i class="bi bi-envelope-at fs-6"></i></a>
+                        <a  class="m-2" href="https://www.linkedin.com/in/jai-prakash-93b524297/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin fs-6"></i></a>
+                        <a  class="m-2" href="https://github.com/jaykumar14921" target="_blank" rel="noopener noreferrer"><i class="bi bi-github fs-6"></i></a>
                     </div>
                 </div>
             </div>
