--- a/public/index.html
+++ b/public/index.html
@@ -363,9 +363,9 @@
                 Hey,<span class="wave">👋</span>
                 <h3>I'm Jai Prakash.</h3>
                 <!-- Dynamic text(Profession) --> 
-                <div class="loader d-inline-flex">
-                    <p style="color: rgb(34, 193, 116); font-size:large;">a</p>
-                    <div class="words">
+                <div class="loader d-flex">
+                    <p style="color: rgb(34, 193, 116); font-size: 20px;">a</p>
+                    <div class="words mt-1">
                         <span class="word">Student</span>
                         <span class="word">Software Developer</span>
                         <span class="word">Backend Developer</span>
