--- a/public/index.html
+++ b/public/index.html
@@ -375,11 +375,11 @@
                     </div>
                 </div>
                 <p style="white-space:inherit;">I am a Software Engineer with a knack for building highly scalable and distributed systems.</p>
-                <h5>WORKED AT</h5>
+                <!-- <h5>WORKED AT</h5>
                 <div class="d-flex">
                     <img width="50px" style="margin-right: 5%;" src="/assets/amazon-web-services.svg" alt="AWS Logo">
                     <img width="150px" src="/assets/shiprocket.svg" alt="Shiprocket Logo">
-                </div>
+                </div> -->
                 <div class="container-fluid d-flex flex-wrap">
                     <button class="btn btn-outline-success ms-0 m-2">My Resume</button>
                     <div class="d-block ms-0 m-2">
