--- a/public/index.html
+++ b/public/index.html
@@ -381,7 +381,7 @@
                     <img width="150px" src="/assets/shiprocket.svg" alt="Shiprocket Logo">
                 </div> -->
                 <div class="container-fluid d-flex flex-wrap">
-                    <button class="btn btn-outline-success ms-0 m-2">My Resume</button>
+                    <a href="Jai_Prakash_Kumar_.pdf"><button class="btn btn-outline-success ms-0 m-2">My Resume</button></a>
                     <div class="d-block ms-0 m-2">
                         <a class="bi bi-envelope-at fs-4 mx-1" href="mailto:jaykumar14921@gmail.com"></a>
                         <a class="mx-1" href="https://www.linkedin.com/in/jai-prakash-93b524297/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin fs-4"></i></a>
