--- a/public/index.html
+++ b/public/index.html
@@ -497,46 +497,50 @@
         <div id="projects" class="card-group mb-5 d-flex justify-content-evenly flex-wrap">
             <div class="container mt-5" style="width: 288px;">
                 <div id="button" class="card" style="height: 480px; width: 280px;">
-                    <div class="card-header"><img src="/assets/booking.svg" width="160px" alt="Booking illustration"></div>
+                    <div class="card-header"><img src="/assets/booking.svg" width="160px" alt="Image"></div>
                     <div class="card-body">
-                        <h6 style="font-weight: 700;">Employee Leave Pass and Visitor Booking</h6>
-                        <i style="font-size: large;">- Aakar Foundry Pvt Ltd</i>
-                        <p style="font-size: medium;">This web application brings entire visitor appointment booking, authentication and employee leave pass generation for over 400+ employees online.</p>
+                        <h6 style="font-weight: 700;">A REST API Website</h6>
+                        <i style="font-size: large;">- ImposterAPI</i>
+                        <p style="font-size: medium;">It is a API website for practice and learning purpose with simple interactive user-friendly UI for good experience, with all routing techniques and a demo website create using the API.</p>
                     </div>
-                    <div class="card-footer"><button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal-1">View</button></div>
+                    <div class="card-footer"><a href="https://imposterapi-5.onrender.com"><button>View</button></a></div>
+                    <!-- <div class="card-footer"><button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal-1">View</button></div> -->
                 </div>
             </div>
             <div class="container mt-5" style="width: 288px;">
                 <div id="button" class="card" style="height: 480px; width: 280px;">
-                    <div class="card-header"><img src="/assets/shopping.svg" width="160px" alt="Shopping illustration"></div>
+                    <div class="card-header"><img src="/assets/shopping.svg" width="160px" alt="Image"></div>
                     <div class="card-body">
                         <h6 style="font-weight: 700;">E-Commerce Application</h6>
-                        <i style="font-size: large;">- Personal (Project)</i>
+                        <i style="font-size: large;">- GroseryBucket</i>
                         <p style="font-size: medium;">A fully fledged E-Commerce website with Sign In and Goggle O-Authentication feature.</p>
                     </div>
-                    <div class="card-footer" style="margin-top: -80px;"><button class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal-2">View</button></div>
+                    <div class="card-footer"><a href="https://groserybucket.onrender.com"><button>View</button></a></div>
+                    <!-- <div class="card-footer" style="margin-top: -80px;"><button class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal-2">View</button></div> -->
                 </div>
             </div>
             <div class="container mt-5" style="width: 288px;">
                 <div id="button" class="card" style="height: 480px; width: 280px;">
-                    <div class="card-header"><img src="/assets/data-reports.svg" width="160px" alt="Data reports illustration"></div>
+                    <div class="card-header"><img src="/assets/data-reports.svg" width="160px" alt="Image"></div>
                     <div class="card-body">
-                        <h6 style="font-weight: 700;">Measurement System Analysis</h6>
-                        <i style="font-size: large;">- Fluid Control Pvt Ltd</i>
-                        <p style="font-size: medium;">This web application helps identify, catalog, calibrate and study the measurement certainty of inspection, testing, and lab equipment.</p>
+                        <h6 style="font-weight: 700;">URL Shortner</h6>
+                        <i style="font-size: large;">- URL snipper</i>
+                        <p style="font-size: medium;">An easy and simple website for shorting you long URL links into short and simple URL links.</p>
                     </div>
-                    <div class="card-footer" style="margin-top: -80px;"><button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal-3">View</button></div>
+                    <div class="card-footer"><a href="https://url-snipper.onrender.com"><button>View</button></a></div>
+                    <!-- <div class="card-footer" style="margin-top: -80px;"><button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal-3">View</button></div> -->
                 </div>
             </div>
             <div class="container mt-5" style="width: 288px;">
                 <div id="button" class="card" style="height: 480px; width: 280px;">
-                    <div class="card-header"><img src="/assets/chat.svg" width="160px" alt="Chat illustration"></div>
+                    <div class="card-header"><img src="/assets/chat.svg" width="160px" alt="Image"></div>
                     <div class="card-body">
                         <h6 style="font-weight: 700;">Real Time Chat Application</h6>
-                        <i style="font-size: large;">- Personal (Project)</i>
+                        <i style="font-size: large;">- Personal Project (Upcoming)</i>
                         <p style="font-size: medium;">This web application supports real-time bi-directional communication, which makes it a great fit for a chat app.</p>
                     </div>
-                    <div class="card-footer" style="margin-top: -80px;"><button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal-4">View</button></div>
+                    <div class="card-footer"><a href=""><button>View</button></a></div>
+                    <!-- <div class="card-footer" style="margin-top: -80px;"><button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal-4">View</button></div> -->
                 </div>
             </div>
         </div>
