--- a/public/index.html
+++ b/public/index.html
@@ -503,7 +503,7 @@
                         <i style="font-size: large;">- ImposterAPI</i>
                         <p style="font-size: medium;">It is a API website for practice and learning purpose with simple interactive user-friendly UI for good experience, with all routing techniques and a demo website create using the API.</p>
                     </div>
-                    <div class="card-footer"><a href="https://imposterapi-5.onrender.com"><button>View</button></a></div>
+                    <div class="card-footer"><a href="https://imposterapi-5.onrender.com"><button class="btn btn-outline-success">View</button></a></div>
                     <!-- <div class="card-footer"><button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal-1">View</button></div> -->
                 </div>
             </div>
@@ -515,7 +515,7 @@
                         <i style="font-size: large;">- GroseryBucket</i>
                         <p style="font-size: medium;">A fully fledged E-Commerce website with Sign In and Goggle O-Authentication feature.</p>
                     </div>
-                    <div class="card-footer"><a href="https://groserybucket.onrender.com"><button>View</button></a></div>
+                    <div class="card-footer"><a href="https://groserybucket.onrender.com"><button class="btn btn-outline-success">View</button></a></div>
                     <!-- <div class="card-footer" style="margin-top: -80px;"><button class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal-2">View</button></div> -->
                 </div>
             </div>
@@ -527,7 +527,7 @@
                         <i style="font-size: large;">- URL snipper</i>
                         <p style="font-size: medium;">An easy and simple website for shorting you long URL links into short and simple URL links.</p>
                     </div>
-                    <div class="card-footer"><a href="https://url-snipper.onrender.com"><button>View</button></a></div>
+                    <div class="card-footer"><a href="https://url-snipper.onrender.com"><button class="btn btn-outline-success">View</button></a></div>
                     <!-- <div class="card-footer" style="margin-top: -80px;"><button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal-3">View</button></div> -->
                 </div>
             </div>
@@ -539,7 +539,7 @@
                         <i style="font-size: large;">- Personal Project (Upcoming)</i>
                         <p style="font-size: medium;">This web application supports real-time bi-directional communication, which makes it a great fit for a chat app.</p>
                     </div>
-                    <div class="card-footer"><a href=""><button>View</button></a></div>
+                    <div class="card-footer"><a href=""><button class="btn btn-outline-success">View</button></a></div>
                     <!-- <div class="card-footer" style="margin-top: -80px;"><button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal-4">View</button></div> -->
                 </div>
             </div>
